--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -8,6 +8,12 @@
   background-color: hsl(222, 26%, 31%);
 }
 
+.calculator-container {
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+
 p,
 div,
 button,
